--- a/client/main.css
+++ b/client/main.css
@@ -3,9 +3,10 @@ body {
   color: white;
   padding: 10px;
   font-family: sans-serif;
+  height: 100vh;
 }
 
-body {
+/* body {
   font-family: sans-serif;
   background-color: #315481;
   background-image: radial-gradient(
@@ -141,4 +142,4 @@ form {
   .new-message input {
     padding-top: 15px;
   }
-}
+} */
