basic styling for singles page

--- a/client/main.css
+++ b/client/main.css
@@ -4,6 +4,11 @@ body {
   padding: 10px;
   font-family: sans-serif;
   height: 100vh;
+  width: 100vw;
+}
+
+::placeholder {
+  font-size: 2rem;
 }
 
 /* body {
