add styling to singles cards as well as adding footer

--- a/client/main.css
+++ b/client/main.css
@@ -1,14 +1,17 @@
 body {
-  background-color: #212121;
+  background-color: white;
   color: white;
-  padding: 10px;
+  margin: 0;
   font-family: sans-serif;
   height: 100vh;
-  width: 100vw;
 }
 
 ::placeholder {
   font-size: 2rem;
+}
+
+.react-audio-player {
+  text-align: center;
 }
 
 /* body {
