Add Readme file, Fix player on a singles page

--- a/client/main.css
+++ b/client/main.css
@@ -12,8 +12,8 @@ body {
 
 .react-audio-player {
   text-align: center;
-  position: relative;
-  top: 15rem;
+  /* position: relative;
+  top: 15rem; */
 }
 
 .accounts-dialog {
